--- a/Shop.html
+++ b/Shop.html
@@ -7,36 +7,36 @@
   <body background="Image/nenchinh.jpg">
     <div
       class="h1"><b>Danh sách sản phẩm</b> </div>
-    <p><a class="des" href="ao1.html">
+    <p><a name="ao1" class="des" href="ao1.html">
     <img class="ao" src="Image/ao1.jpg" alt="Jacket Hot"> Jacket Jumbo</p>
     </a>
 
-    <p><a class="des" href="ao2.html">
+    <p><a name="ao2" class="des" href="ao2.html">
       <img class="ao" src="Image/ao2.jpg" alt="Jacket Hot"> Luvis Jack</p></a>
 
-    <p><a class="des" href="ao3.html">
+    <p><a name="ao3" class="des" href="ao3.html">
       <img class="ao" src="Image/ao3.jpg" alt="Jacket Hot"> Dode Balmain</p></a>
 
-    <p><a class="des" href="ao4.html">
+    <p><a name="ao4" class="des" href="ao4.html">
       <img class="ao" src="Image/ao4.jpg" alt="Jacket Hot"> Jacket Rambo</p></a>
 
-    <p><a class="des" href="ao5.html">
-      <img class="ao" src="Image/ao5.jpeg" alt="Jacket Hot"> Jacket Bell</p></a>
+    <p><a name="ao5" class="des" href="ao5.html">
+      <img class="aofix" src="Image/ao5.jpeg" alt="Jacket Hot"> Jacket Bell</p></a>
 
-    <p><a class="des" href="ao6.html">
-      <img class="ao" src="Image/ao6.jpeg" alt="Jacket Hot"> XC Jacket</p></a>
+    <p><a name="ao6" class="des" href="ao6.html">
+      <img class="aofix" src="Image/ao6.jpeg" alt="Jacket Hot"> XC Jacket</p></a>
 
-    <p><a class="des" href="ao7.html">
-      <img class="ao" src="Image/ao7.jpg" alt="Jacket Hot"> Sum XC Jacket</p></a>
+    <p><a name="ao7" class="des" href="ao7.html">
+      <img class="ao7" src="Image/ao7.jpg" alt="Jacket Hot"> Sum XC Jacket</p></a>
 
-    <p><a class="des" href="ao8.html">
-      <img class="ao" src="Image/ao8.jpeg" alt="Jacket Hot"> MM Jacket</p></a>
+    <p><a name="ao8" class="des" href="ao8.html">
+      <img class="aofix" src="Image/ao8.jpeg" alt="Jacket Hot"> MM Jacket</p></a>
 
-    <p><a class="des" href="ao9.html">
-      <img class="ao" src="Image/ao9.jpg" alt="Jacket Hot"> Luci Balmain</p></a>
+    <p><a name="ao9" class="des" href="ao9.html">
+      <img class="aofix" src="Image/ao9.jpg" alt="Jacket Hot"> Luci Balmain</p></a>
 
-    <p><a class="des" href="ao10.html">
-      <img class="ao" src="Image/ao10.jpg" alt="Jacket Hot"> Hone Jack</p></a>
+    <p><a name="ao10" class="des" href="ao10.html">
+      <img class="aofix" src="Image/ao10.jpg" alt="Jacket Hot"> Hone Jack</p></a>
     <br> Copyright &#169; 2016
   </body>
   </html>
