--- a/ao10.html
+++ b/ao10.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="Css/style.css">
   </head>
-  <body>
-    <p><a class="des" href="Shop.html">
-    <img class="ao" src="Image/ao10.jpg" alt="Jacket Hot">Hone Jack</p>
+  <body background="Image/nenitem.jpg">
+    <p><a class="des" href="Shop.html#ao10">
+    <img class="aofix" src="Image/ao10.jpg" alt="Jacket Hot"> Hone Jack</p>
     </a>
-    <p><b>Description</b> : Double-breasted coat in Italian, wool-blend brushed
-      twill with a funnel collar.</p>
+    <p><b>Description</b>:<font color=red font size=5> Double-breasted coat in Italian, wool-blend brushed
+      twill with a funnel collar.</font></p>
     <p><b>Price</b> : 800$</p>
-    <A Href = Shop.html>Back</a>
+    <A Href = "Shop.html#ao10" >Back</a>
     </body>
 </html>
