--- a/ao2.html
+++ b/ao2.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="Css/style.css">
   </head>
-  <body>
-    <p><a class="des" href="Shop.html">
+  <body background="Image/nenitem.jpg">
+    <p><a class="des" href="Shop.html#ao2">
     <img class="ao" src="Image/ao2.jpg" alt="Jacket Hot">Dode Balmain</p>
     </a>
-    <p><b>Description</b> : Leather jacket with a quilted pattern,
+    <p><b>Description</b>:<font color=red font size=5> Leather jacket with a quilted pattern,
       metal-embroidered appliqués, a collar and a gold-coloured two-way zip at
       the front that can be fastened in two ways.Zipped side pockets, tabs
       with gold-coloured press-studs at the sides of the hem, two inner pockets
       with buttons, pleats at the back and sleeves with metal-embroidered
-      appliqués and zips at the cuffs.Lined. Black 100% leather.Specialist 
-      clean.</p>
+      appliqués and zips at the cuffs.Lined. Black 100% leather.Specialist
+      clean.</font></p>
     <p><b>Price</b> : 700$</p>
-    <A Href = Shop.html>Back</a>
+    <A Href = "Shop.html#ao2">Back</a>
     </body>
 </html>
