--- a/ao6.html
+++ b/ao6.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="Css/style.css">
   </head>
-  <body>
-    <p><a class="des" href="Shop.html">
-    <img class="ao" src="Image/ao6.jpeg" alt="Jacket Hot">XC Jacket</p>
+  <body background="Image/nenitem.jpg">
+    <p><a class="des" href="Shop.html#ao6">
+    <img class="aofix" src="Image/ao6.jpeg" alt="Jacket Hot"> XC Jacket</p>
     </a>
-    <p><b>Description</b> : Double-breasted coat in Italian, wool-blend brushed
+    <p><b>Description</b>:<font color=red font size=5> Double-breasted coat in Italian, wool-blend brushed
       twill with a funnel collar with stitching and antiqued metal buttons at
-      the front.</p>
+      the front.</font></p>
     <p><b>Price</b> : 3000$</p>
-    <A Href = Shop.html>Back</a>
+    <A Href = "Shop.html#ao6">Back</a>
     </body>
 </html>
