--- a/ao8.html
+++ b/ao8.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="Css/style.css">
   </head>
-  <body>
-    <p><a class="des" href="Shop.html">
-    <img class="ao" src="Image/ao8.jpeg" alt="Jacket Hot">MM Jacket</p>
+  <body background="Image/nenitem.jpg">
+    <p><a class="des" href="Shop.html#ao8">
+    <img class="aofix" src="Image/ao8.jpeg" alt="Jacket Hot"> MM Jacket</p>
     </a>
-    <p><b>Description</b> : Double-breasted coat in Italian, wool-blend brushed
-      twill with a funnel .</p>
+    <p><b>Description</b>:<font color=red font size=5> Double-breasted coat in Italian, wool-blend brushed
+      twill with a funnel .</font></p>
     <p><b>Price</b> : 690$</p>
-    <A Href = Shop.html>Back</a>
+    <A Href = "Shop.html#ao8" >Back</a>
     </body>
 </html>
